[tool.poetry]
name = "getcourse-export-api"
version = "0.1.4"
description = ""
authors = ["Oleg Ionov <ionov.dpmn@gmail.com>"]
readme = "README.md"
packages = [{include = "getcourse_export_api"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
pydantic = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
